<resources>
    <string name="app_name">NetflixRemake</string>
    
    <string name="cast">Elenco: %1$s</string>
    <string name="similar">Opções semelhantes</string>

    <string name="new_to_netflix">New to Netflix? Sign up now.</string>
    <string name="enter">ENTER</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="already_has_account">already has account ? click here.</string>
    <string name="generic_error_edit_text">O campo %s não pode estar em branco</string>
    <string name="email_error">Email incorreto </string>
    <string name="password_error">Senha incorreta</string>
    <string name="password_error_length">A senha não pode ser menor que 6 caracters</string>
    <string name="unexpected_error">Ops...ocorreu um erro inesperado </string>
</resources>